打印不自动关闭

--- a/src/main/resources/views/modules/print/sheet001.html
+++ b/src/main/resources/views/modules/print/sheet001.html
@@ -205,9 +205,9 @@ rt
 
     window.onload = function(){
         window.print();
-        js.closeCurrentTabPage(function(contentWindow){
+    /*    js.closeCurrentTabPage(function(contentWindow){
             contentWindow.page();
-        });
+        });*/
     }
 </script>
 
