feat：客户管理增加两个字段

--- a/src/main/resources/views/modules/print/sheet001.html
+++ b/src/main/resources/views/modules/print/sheet001.html
@@ -1,4 +1,4 @@
-
+﻿
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
 <meta name=ProgId content=Excel.Sheet>
@@ -49,7 +49,7 @@ rt
 <![endif]>
 </head>
 
-<body link="#0563C1" vlink="#954F72" class=xl65 style="margin-left: 25px;">
+<body link="#0563C1" vlink="#954F72" class=xl65 style="margin-left: 20px;">
 <table border=0 cellpadding=0 cellspacing=0 width=775 style='border-collapse:
  collapse;table-layout:fixed;width:582pt'>
  <col class=xl65 width=68 style='mso-width-source:userset;mso-width-alt:2176;
@@ -72,7 +72,7 @@ rt
  width:54pt'>
  <tr height=31 style='mso-height-source:userset;height:23.25pt'>
   <td colspan=9 height=31 class=xl67 width=775 style='height:40.25pt;
-  width:582pt'>三河市兴悦达机动车检测服务有限公司结算单</td>
+  width:582pt'>结算单</td>
  </tr>
  <tr class=xl65 height=14 style='mso-height-source:userset;height:10.5pt'>
   <td height=14 class=xl67 style='height:10.5pt'></td>
@@ -204,10 +204,10 @@ rt
  $("#money").html(str);
 
     window.onload = function(){
-        window.print();
-    /*    js.closeCurrentTabPage(function(contentWindow){
-            contentWindow.page();
-        });*/
+      window.print();
+     //   js.closeCurrentTabPage(function(contentWindow){
+     //       contentWindow.page();
+     //   });
     }
 </script>
 
