--- a/src/main/resources/views/modules/customer/customerForm.html
+++ b/src/main/resources/views/modules/customer/customerForm.html
@@ -63,7 +63,30 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label class="control-label col-sm-4" title="">
+								<span class="required hide">*</span> ${text('代理人')}：<i class="fa icon-question hide"></i></label>
+							<div class="col-sm-8">
+								<#form:input path="agentName" maxlength="11" class="form-control"/>
+							</div>
+						</div>
+					</div>
 				</div>
+
+				<div class="row">
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label class="control-label col-sm-4" title="">
+								<span class="required hide">*</span> ${text('备注人')}：<i class="fa icon-question hide"></i></label>
+							<div class="col-sm-8">
+								<#form:input path="remarkName" maxlength="11" class="form-control"/>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="form-group">
