--- a/src/main/resources/views/modules/print/stylesheet.css
+++ b/src/main/resources/views/modules/print/stylesheet.css
@@ -1,248 +1,1 @@
-tr
-	{mso-height-source:auto;
-	mso-ruby-visibility:none;}
-col
-	{mso-width-source:auto;
-	mso-ruby-visibility:none;}
-br
-	{mso-data-placement:same-cell;}
-ruby
-	{ruby-align:left;}
-.style0
-	{mso-number-format:General;
-	text-align:general;
-	vertical-align:bottom;
-	white-space:nowrap;
-	mso-rotate:0;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	color:black;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:µÈÏß;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	border:none;
-	mso-protection:locked visible;
-	mso-style-name:³£¹æ;
-	mso-style-id:0;}
-td
-	{mso-style-parent:style0;
-	padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:µÈÏß;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:General;
-	text-align:general;
-	vertical-align:bottom;
-	border:none;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	mso-protection:locked visible;
-	white-space:nowrap;
-	mso-rotate:0;}
-.xl65
-	{mso-style-parent:style0;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;}
-.xl66
-	{mso-style-parent:style0;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:"0\.00_ ";}
-.xl67
-	{mso-style-parent:style0;
-	font-size:14.0pt;
-	font-weight:700;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;}
-.xl68
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;}
-.xl69
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:left;}
-.xl70
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:"0\.00_ ";}
-.xl71
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:"\@";}
-.xl72
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid windowtext;}
-.xl73
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:"0\.00_ ";
-	text-align:right;
-	vertical-align:middle;
-	border:.5pt solid windowtext;}
-.xl74
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:"0\.00_ ";
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl75
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:"0\.00_ ";
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
-.xl76
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:left;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;}
-.xl77
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:left;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
-.xl78
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:left;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;}
-.xl79
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:right;}
-.xl80
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:none;
-	border-left:none;}
-.xl81
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid windowtext;
-	background:gray;
-	mso-pattern:black none;}
-.xl82
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-number-format:"0\.00_ ";
-	text-align:center;
-	vertical-align:middle;
-	border:.5pt solid windowtext;
-	background:gray;
-	mso-pattern:black none;}
-.xl83
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:none;
-	border-bottom:.5pt solid windowtext;
-	border-left:.5pt solid windowtext;
-	background:gray;
-	mso-pattern:black none;}
-.xl84
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	font-family:ËÎÌå;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	text-align:center;
-	vertical-align:middle;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
-	border-left:none;
-	background:gray;
-	mso-pattern:black none;}
+tr{mso-height-source:auto;mso-ruby-visibility:none}col{mso-width-source:auto;mso-ruby-visibility:none}br{mso-data-placement:same-cell}ruby{ruby-align:left}.style0{mso-number-format:General;text-align:general;vertical-align:bottom;white-space:nowrap;mso-rotate:0;mso-background-source:auto;mso-pattern:auto;color:black;font-size:11.0pt;font-weight:400;font-style:normal;text-decoration:none;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;border:0;mso-protection:locked visible;mso-style-name:ï¿½ï¿½ï¿½ï¿½;mso-style-id:0}td{mso-style-parent:style0;padding-top:1px;padding-right:1px;padding-left:1px;mso-ignore:padding;color:black;font-size:11.0pt;font-weight:400;font-style:normal;text-decoration:none;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:General;text-align:general;vertical-align:bottom;border:0;mso-background-source:auto;mso-pattern:auto;mso-protection:locked visible;white-space:nowrap;mso-rotate:0}.xl65{mso-style-parent:style0;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134}.xl66{mso-style-parent:style0;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:"0\.00_ "}.xl67{mso-style-parent:style0;font-size:14.0pt;font-weight:700;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:center}.xl68{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134}.xl69{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:left}.xl70{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:"0\.00_ "}.xl71{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:"\@"}.xl72{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:center;vertical-align:middle;border:.5pt solid windowtext}.xl73{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:"0\.00_ ";text-align:right;vertical-align:middle;border:.5pt solid windowtext}.xl74{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:"0\.00_ ";text-align:center;vertical-align:middle;border-top:.5pt solid windowtext;border-right:0;border-bottom:.5pt solid windowtext;border-left:.5pt solid windowtext}.xl75{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:"0\.00_ ";text-align:center;vertical-align:middle;border-top:.5pt solid windowtext;border-right:.5pt solid windowtext;border-bottom:.5pt solid windowtext;border-left:none}.xl76{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:left;vertical-align:middle;border-top:.5pt solid windowtext;border-right:0;border-bottom:.5pt solid windowtext;border-left:.5pt solid windowtext}.xl77{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:left;vertical-align:middle;border-top:.5pt solid windowtext;border-right:0;border-bottom:.5pt solid windowtext;border-left:none}.xl78{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:left;vertical-align:middle;border-top:.5pt solid windowtext;border-right:.5pt solid windowtext;border-bottom:.5pt solid windowtext;border-left:none}.xl79{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:right}.xl80{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;border-top:.5pt solid windowtext;border-right:0;border-bottom:0;border-left:none}.xl81{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:center;vertical-align:middle;border:.5pt solid windowtext;background:gray;mso-pattern:black none}.xl82{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;mso-number-format:"0\.00_ ";text-align:center;vertical-align:middle;border:.5pt solid windowtext;background:gray;mso-pattern:black none}.xl83{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:center;vertical-align:middle;border-top:.5pt solid windowtext;border-right:0;border-bottom:.5pt solid windowtext;border-left:.5pt solid windowtext;background:gray;mso-pattern:black none}.xl84{mso-style-parent:style0;font-size:9.0pt;font-family:ï¿½ï¿½ï¿½ï¿½;mso-generic-font-family:auto;mso-font-charset:134;text-align:center;vertical-align:middle;border-top:.5pt solid windowtext;border-right:.5pt solid windowtext;border-bottom:.5pt solid windowtext;border-left:none;background:gray;mso-pattern:black none}
