feat: 申请单样式调整

--- a/src/main/resources/views/modules/check/checkBillDetail.html
+++ b/src/main/resources/views/modules/check/checkBillDetail.html
@@ -94,6 +94,30 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="row">
+
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label class="control-label col-sm-4" title="">
+								<span class="required ">*</span> ${text('备注人')}：<i class="fa icon-question hide"></i></label>
+							<div class="col-sm-8">
+								<#form:input id="remarkName" path="remarkName" readonly="true"  class="form-control"/>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-xs-6">
+						<div class="form-group">
+							<label class="control-label col-sm-4" title="">
+								<span class="required ">*</span> ${text('代理人')}：<i class="fa icon-question hide"></i></label>
+							<div class="col-sm-8">
+								<#form:input id="agentName" path="agentName" readonly="true" class="form-control"/>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="form-group">
