--- a/src/main/resources/static/common/1_1_files/style.css
+++ b/src/main/resources/static/common/1_1_files/style.css
@@ -108,12 +108,12 @@
 }
 .stl_15 {
 	font-size: 1em;
-	font-family: "UUCLHE+SimSun";
+	/*font-family: "UUCLHE+SimSun";*/
 	color: #000000;
 }
 .stl_16 {
 	font-size: 0.83em;
-	font-family: "UUCLHE+SimSun";
+	/*font-family: "UUCLHE+SimSun";*/
 	color: #000000;
 }
 @font-face {
