--- a/src/main/resources/views/modules/print/applyBillv4.html
+++ b/src/main/resources/views/modules/print/applyBillv4.html
@@ -1847,6 +1847,15 @@ rt
 
 </div>
 
+<script>
+
+ window.onload = function(){
+  window.print();
+  //   js.closeCurrentTabPage(function(contentWindow){
+  //       contentWindow.page();
+  //   });
+ }
+</script>
 
 <!----------------------------->
 <!--“从 EXCEL 发布网页”向导结束-->
