--- a/src/main/resources/views/modules/print/applyBillv4.html
+++ b/src/main/resources/views/modules/print/applyBillv4.html
@@ -1181,7 +1181,7 @@ rt
  </tr>
  <tr height=51 style='mso-height-source:userset;height:38.0pt'>
   <td colspan=2 rowspan=3 height=153 class=xl175 dir=LTR width=58
-  style='height:114.0pt;width:44pt;writing-mode:vertical-lr'>机 动 车 所 有 人</td>
+  style='height:114.0pt;width:44pt;'>机<br> 动<br> 车<br> 所<br> 有<br> 人</td>
   <td colspan=2 class=xl97 width=117 style='border-right:.5pt solid black;
   width:88pt'>姓名/名称</td>
   <td colspan=13 class=xl103 width=210 style='border-right:.5pt solid black;
@@ -1213,7 +1213,7 @@ rt
  </tr>
  <tr height=61 style='mso-height-source:userset;height:46.0pt'>
   <td colspan=2 height=61 class=xl123 dir=LTR width=58 style='height:46.0pt;
-  width:44pt;writing-mode:vertical-lr''>代 理 人</td>
+  width:44pt;'>代<br> 理<br> 人</td>
   <td colspan=2 class=xl124 width=117 style='border-right:.5pt solid black;
   width:88pt'>姓名/名称</td>
   <td colspan=7 class=xl124 width=133 style='border-right:.5pt solid black;
@@ -1250,7 +1250,7 @@ rt
   <td class=xl86 width=35 style='width:26pt'></td>
  </tr>
  <tr height=40 style='mso-height-source:userset;height:30.0pt'>
-  <td rowspan=2 height=80 class=xl162 width=29 style='height:60.0pt;width:22pt'>号牌</td>
+  <td rowspan=2 height=80 class=xl162 width=29 style='height:60.0pt;width:22pt'>号<br>牌</td>
   <td colspan=2 class=xl141 width=82 style='border-left:none;width:62pt'>□补领</td>
   <td class=xl70 width=64 style='border-left:none;width:48pt'><span
   style='mso-spacerun:yes'>              </span></td>
@@ -1291,7 +1291,7 @@ rt
   <td class=xl86 width=35 style='width:26pt'></td>
  </tr>
  <tr height=40 style='mso-height-source:userset;height:30.0pt'>
-  <td rowspan=2 height=80 class=xl162 width=29 style='height:60.0pt;width:22pt'>行驶证</td>
+  <td rowspan=2 height=80 class=xl162 width=29 style='height:60.0pt;width:22pt'>行<br>驶<br>证</td>
   <td colspan=2 class=xl138 width=82 style='border-right:.5pt solid black;
   border-left:none;width:62pt'>□补领</td>
   <td class=xl70 width=64 style='border-left:none;width:48pt'><span
@@ -1345,7 +1345,7 @@ rt
  </tr>
  <tr height=40 style='mso-height-source:userset;height:30.0pt'>
   <td rowspan=3 height=120 class=xl164 width=29 style='height:90.0pt;
-  width:22pt'>登记证书</td>
+  width:22pt'>登<br>记<br>证<br>书</td>
   <td colspan=2 class=xl143 width=82 style='border-left:none;width:62pt'>□申领</td>
   <td colspan=24 class=xl144 width=575 style='border-right:1.0pt solid black;
   border-left:none;width:436pt'>　</td>
@@ -1400,7 +1400,7 @@ rt
  </tr>
  <tr height=40 style='mso-height-source:userset;height:30.0pt'>
   <td rowspan=3 height=120 class=xl164 width=29 style='border-bottom:1.0pt solid black;
-  height:90.0pt;width:22pt'>检验合格标志</td>
+  height:90.0pt;width:22pt'>检<br>验<br>合<br>格<br>标<br>志</td>
   <td colspan=2 class=xl159 width=82 style='border-left:none;width:62pt'>þ<font
   class="font5">申请</font></td>
   <td class=xl76 width=64 style='border-left:none;width:48pt'>　</td>
@@ -1498,285 +1498,6 @@ rt
   <td class=xl79></td>
   <td class=xl79></td>
   <td class=xl79></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl66 width=29 style='height:15.0pt;width:22pt'></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl66 width=29 style='height:15.0pt;width:22pt'></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl79></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=29 style='height:14.0pt;width:22pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl67 width=53 style='width:40pt'></td>
-  <td class=xl66 width=64 style='width:48pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=23 style='width:17pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=20 style='width:15pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=41 style='width:31pt'></td>
-  <td class=xl66 width=17 style='width:13pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=73 style='width:55pt'></td>
-  <td class=xl66 width=68 style='width:51pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=29 style='height:14.0pt;width:22pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl67 width=53 style='width:40pt'></td>
-  <td class=xl66 width=64 style='width:48pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=23 style='width:17pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=20 style='width:15pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=41 style='width:31pt'></td>
-  <td class=xl66 width=17 style='width:13pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=73 style='width:55pt'></td>
-  <td class=xl66 width=68 style='width:51pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=29 style='height:14.0pt;width:22pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl67 width=53 style='width:40pt'></td>
-  <td class=xl66 width=64 style='width:48pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=23 style='width:17pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=20 style='width:15pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=41 style='width:31pt'></td>
-  <td class=xl66 width=17 style='width:13pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=73 style='width:55pt'></td>
-  <td class=xl66 width=68 style='width:51pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=29 style='height:14.0pt;width:22pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl67 width=53 style='width:40pt'></td>
-  <td class=xl66 width=64 style='width:48pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=23 style='width:17pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=20 style='width:15pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=41 style='width:31pt'></td>
-  <td class=xl66 width=17 style='width:13pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=73 style='width:55pt'></td>
-  <td class=xl66 width=68 style='width:51pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=29 style='height:14.0pt;width:22pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl67 width=53 style='width:40pt'></td>
-  <td class=xl66 width=64 style='width:48pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=23 style='width:17pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=20 style='width:15pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=41 style='width:31pt'></td>
-  <td class=xl66 width=17 style='width:13pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=73 style='width:55pt'></td>
-  <td class=xl66 width=68 style='width:51pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=29 style='height:14.0pt;width:22pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl67 width=53 style='width:40pt'></td>
-  <td class=xl66 width=64 style='width:48pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=23 style='width:17pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=20 style='width:15pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=41 style='width:31pt'></td>
-  <td class=xl66 width=17 style='width:13pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=73 style='width:55pt'></td>
-  <td class=xl66 width=68 style='width:51pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl66 width=35 style='width:26pt'></td>
- </tr>
- <tr height=19 style='height:14.0pt'>
-  <td height=19 class=xl66 width=29 style='height:14.0pt;width:22pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
-  <td class=xl67 width=53 style='width:40pt'></td>
-  <td class=xl66 width=64 style='width:48pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=23 style='width:17pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=20 style='width:15pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=13 style='width:10pt'></td>
-  <td class=xl66 width=41 style='width:31pt'></td>
-  <td class=xl66 width=17 style='width:13pt'></td>
-  <td class=xl66 width=45 style='width:34pt'></td>
-  <td class=xl66 width=73 style='width:55pt'></td>
-  <td class=xl66 width=68 style='width:51pt'></td>
-  <td class=xl66 width=5 style='width:4pt'></td>
-  <td class=xl66 width=29 style='width:22pt'></td>
   <td class=xl66 width=35 style='width:26pt'></td>
  </tr>
  <tr height=16 style='mso-height-source:userset;height:12.75pt'>
