--- a/src/main/resources/views/modules/print/applyBillv5.html
+++ b/src/main/resources/views/modules/print/applyBillv5.html
@@ -1442,6 +1442,17 @@ rt
   <td class=xl79></td>
   <td class=xl66 width=35 style='width:26pt'></td>
  </tr>
+
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl79 style='height:15.0pt'></td>
+  <td class=xl79></td>
+  <td class=xl80 colspan=22 style='mso-ignore:colspan'>车管所提示：此表免费打印。打印单位：三河市兴悦达机动车检测服务有限公司</td>
+  <td class=xl80></td>
+  <td class=xl79></td>
+  <td class=xl79></td>
+  <td class=xl79></td>
+  <td class=xl66 width=35 style='width:26pt'></td>
+ </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=29 style='width:22pt'></td>
