--- a/src/main/resources/views/modules/print/applyBillv5.html
+++ b/src/main/resources/views/modules/print/applyBillv5.html
@@ -1438,7 +1438,7 @@ rt
   <td colspan=14 height=20 class=xl127 width=209 style='height:15.0pt;
   border-left:none;width:160pt'>　</td>
   <td colspan=5 class=xl129 width=208 style='border-right:1.0pt solid black;
-  width:157pt'>2021年10月26日</td>
+  width:157pt'>${customer.date}</td>
   <td class=xl79></td>
   <td class=xl66 width=35 style='width:26pt'></td>
  </tr>
