--- a/src/main/resources/views/modules/check/checkBillForm.html
+++ b/src/main/resources/views/modules/check/checkBillForm.html
@@ -49,7 +49,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required hide">*</span> ${text('客户名称')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-								<#form:input id="customerName" readonly="true" path="customerName" maxlength="100" class="form-control"/>
+								<#form:input id="customerName" path="customerName" maxlength="100" class="form-control"/>
 							</div>
 						</div>
 					</div>
