feat: 设置缩放比例

--- a/src/main/resources/views/modules/print/applyBillv6.html
+++ b/src/main/resources/views/modules/print/applyBillv6.html
@@ -19,11 +19,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-vertical-page-align:center;}
 .font5
 	{color:black;
-	font-size:12.0pt;
+	font-size:10.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:黑体;
+	/*font-family:黑体;*/
 	mso-generic-font-family:auto;
 	mso-font-charset:134;}
 .font6
@@ -786,8 +786,8 @@ td
 .xl138
 	{mso-style-parent:style65535;
 	color:black;
-	font-size:16.0pt;
-	font-family:黑体;
+	font-size:10.0pt;
+	/*font-family:黑体;*/
 	mso-generic-font-family:auto;
 	mso-font-charset:134;
 	text-align:center;
@@ -1172,6 +1172,14 @@ rt
 	mso-font-charset:134;
 	mso-char-type:none;
 	display:none;}
+
+/*@media print {
+ body {
+  transform: scale(1.30);
+  transform-origin: top left;
+ }
+}*/
+
 -->
 </style>
 </head>
